--- a/src/app/features/auth/register/register.css
+++ b/src/app/features/auth/register/register.css
@@ -1,3 +1,6 @@
+main, .main-div, .register-container {
+    padding-bottom: 20%;
+}
   .register-container{ display: flex;
     justify-content: center;
     align-items: center;
