--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+main {
+	padding-bottom: 20%;
+}
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
