style: update header layout, user menu, and remove link borders

--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -6,24 +6,29 @@
       <span class="logo-cal">cal</span>
     </div>
   </div>
-  <nav class="main-nav">
-  <div class="main-nav-list">
-     <span><a [routerLink]="['/daily-calendar']">daily-Calendar</a></span>
-    <span><a [routerLink]="['/family-calendar']">Calendar</a></span>
-     <span><a [routerLink]="['/family-members']">family-members</a></span>
-     <span  *ngIf="!authService.currentUser()"><a [routerLink]="['/register']">register</a></span>
-    <span *ngIf="!authService.currentUser()">
-        <a [routerLink]="['/login']">Login</a>
-      </span>
 
-      <!-- Show "Logout" only IF the user IS logged in -->
-      <span *ngIf="authService.currentUser()">
-  <span class="logged-in-as">Logged in as {{ authService.currentUser()?.familyName }}</span>
-        <!-- We use a click handler here instead of routerLink -->
-        <a href="#" (click)="logout()">Logout</a>
+  <nav class="main-nav">
+    <div class="main-nav-list">
+      <span><a [routerLink]="['/daily-calendar']">daily-Calendar</a></span>
+      <span><a [routerLink]="['/family-calendar']">Calendar</a></span>
+      <span><a [routerLink]="['/family-members']">family-members</a></span>
+    </div>
+    <div class="header-right">
+      <span *ngIf="!authService.currentUser()"><a [routerLink]="['/register']">Register</a></span>
+      <span *ngIf="!authService.currentUser()"><a [routerLink]="['/login']">Login</a></span>
+      <span *ngIf="authService.currentUser()" class="user-menu-container">
+        <span class="user-icon" title="Logged in" (click)="toggleMenu()">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="12" cy="8" r="4" fill="#888"/>
+            <rect x="4" y="16" width="16" height="6" rx="3" fill="#888"/>
+          </svg>
+        </span>
+        <ul class="user-dropdown-menu" *ngIf="menuOpen()">
+          <li class="user-name">{{ authService.currentUser()?.familyName }}</li>
+          <li><a class="main-nav-list" href="#" (click)="logout()">Logout</a></li>
+        </ul>
       </span>
-  
-  </div>
-</nav>
+    </div>
+  </nav>
  
 </header>
