--- a/src/app/features/weekly-improvement/weekly-improvement.css
+++ b/src/app/features/weekly-improvement/weekly-improvement.css
@@ -3,3 +3,12 @@ label { font-weight: 500; }
 input { padding: 0.5rem; border-radius: 4px; border: 1px solid #ccc; }
 button { align-self: flex-start; margin-top: 0.5rem; }
 .saved-message { margin-top: 1rem; color: #388e3c; }
+.fam-btn {
+  border-radius: 30px;
+    border: 1px;
+   color: #17a89a;
+   padding: 5px 10px;
+   cursor: pointer;
+   background-color: #dad5d5;
+  margin-inline-end: 20px
+}
