--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+/* Global fam-btn style for all features */
+.fam-btn {
+	border-radius: 30px;
+	border: 1px;
+	color: #17a89a;
+	padding: 5px 10px;
+	cursor: pointer;
+	background-color: #dad5d5;
+	margin-inline-end: 20px;
+}
 main {
 	padding-bottom: 20%;
 }
